# enjoyyoga

./: .gitignore  CLAUDE.md  LICENSE  README.md
backend/: .env.example  .gitignore  fix_tests.py  pyproject.toml  seed.py  setup_admin.py  setup_contact_templates.py  setup_payment_templates.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_registration_schedule.py  003_admin_and_notifications.py  004_standardize_schedule_format.py  005_add_class_location.py  02a98ec0d229_add_payment_support.py  19a86462cedf_add_inquiry_replies_table.py  268f5619f962_add_tracking_tokens_table.py  5fb47ed06aeb_add_venmo_payment_support_and_dual_.py  8691a70b568f_add_contact_inquiries_table.py  b647922abf3c_add_consent_records_table.py
backend/app/: auth.py  config.py  main.py
backend/app/models/: __init__.py  admin_user.py  class_package.py  class_session.py  consent_record.py  contact_inquiry.py  inquiry_reply.py  notification_template.py  payment.py  payment_settings.py  registration.py  teacher.py  tracking_token.py  yoga_class.py  yoga_type.py
backend/app/routers/: admin.py  classes.py  consent.py  contact.py  payments.py  registrations.py  teachers.py  tracking.py  yoga_types.py
backend/app/schemas/: admin.py  consent.py  contact.py  payment.py  registration.py  teacher.py  tracking.py  yoga_class.py  yoga_type.py
backend/app/services/: consent_service.py  contact_service.py  notification_service.py  payment_service.py  registration_service.py  schedule_parser.py  tracking_service.py
backend/tests/: README.md  __init__.py  conftest.py
(+95 files in other folders)
